tests/diag/corelib_call_hint.ty
fn main():
    xs := sort([3, 1, 2])
    println(str(xs))
